--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+/* src/App.css */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2, h3 {
+  color: #333;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a {
+  color: #007bff;
+  text-decoration: none !important;
+  cursor: pointer;
+}
+
+
+.user-card {
+  background-color: #d1e6ff;
+  border: 1px solid #ddd;
+  padding: 15px;
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 10px;
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.user-card:hover{
+  box-shadow: 0 10px 15px -3px rgba(34, 151, 206, 0.315), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.clock-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #eee;
+}
+
+.clock-section button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.user-details-section {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.user-details-section > div {
+  width: 48%;
+}
+
+.posts-section {
+  margin-top: 20px;
+}
+
+.post-card {
+  background-color: #d1e6ff;
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-radius: 15px;
+}
+
+.clockDesign {
+  background: black;
+  color: green;
+  padding: 15px;
+  border-radius: 5px;
+  font-weight: 200;
+  font-family: fantasy;
+  font-size: larger;
+  min-width: 92px;
+}
+
+.postContainer{
+  display : grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap : 20px
+}
+@media (max-width: 600px) {
+  .user-details-section {
+    flex-direction: column;
   }
 }
